--- a/templates/sites.html
+++ b/templates/sites.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Camper</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+
+
     {% for site in sites %}
         {{ site.site_name }}<br>
         {{ site.location_name }}<br>
@@ -14,6 +9,5 @@
         {{ site.members_only }}<br>
         {{ site.visit_date }}<br>
     {% endfor %}
-    
-</body>
-</html>
+
+{% endblock %}
