--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,40 @@
     <title>Happy Camper</title>
 </head>
 <body>
-    
+
+    <header>
+        <!--Materialize Top Nav Bar-->
+        <nav class="nav-extended text-shadow #ff6e40 deep-orange accent-2">
+            <div class="nav-wrapper">
+              <a href="{{ url_for('get_sites') }}" class="brand-logo">Happy Camper</a>
+              <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fa-solid fa-bars"></i></a>
+              <ul class="right hide-on-med-and-down">
+                <li><a href="{{ url_for('get_sites') }}">Home</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">Find Campsite</a></li>
+                <li><a href="#">New Review</a></li>
+                <li><a href="#">Manage Locations</a></li>
+                <li><a href="#">Log In</a></li>
+                <li><a href="#">Log Out</a></li>
+                <li><a href="#">Register</a></li>                
+              </ul>
+            </div>
+        </nav>
+
+        <!--Materialize Mobile Collapse Button Nav Bar-->
+        <ul class="sidenav" id="mobile-demo">
+            <li><h4 class="center-align deep-orange-text text-darken-4">Happy Camper</h4></li>
+            <li><a href="{{ url_for('get_sites') }}">Home</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Find Campsite</a></li>
+            <li><a href="#">New Review</a></li>
+            <li><a href="#">Manage Locations</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Log Out</a></li>
+            <li><a href="#">Register</a></li>
+        </ul>
+    </header>
+
     {% block content %}
     {% endblock %}
 
