--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                 <li><a href="#">Manage Locations</a></li>
                 <li><a href="#">Log In</a></li>
                 <li><a href="#">Log Out</a></li>
-                <li><a href="#">Register</a></li>                
+                <li><a href="{{ url_for('register') }}">Sign Up</a></li>                
               </ul>
             </div>
         </nav>
@@ -46,7 +46,7 @@
             <li><a href="#">Manage Locations</a></li>
             <li><a href="#">Log In</a></li>
             <li><a href="#">Log Out</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="{{ url_for('register') }}">Sign Up</a></li>
         </ul>
     </header>
 
