Added register functionality

--- a/templates/register.html
+++ b/templates/register.html
@@ -22,13 +22,15 @@
                     <!--Username field -->
                     <div class="input-field col s12">
                         <i class="fa-solid fa-user-shield prefix teal-text text-darken-4"></i>
-                        <input id="username" name="username" type="text" class="validate" required>
+                        <input id="username" name="username" type="text" minlength="5"
+                        maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="username">Username</label>
                     </div>
                     <!--password field -->
                     <div class="input-field col s12">
                         <i class="fa-solid fa-lock prefix teal-text text-darken-4"></i>
-                        <input id="password" name="password" type="text" class="validate" required>
+                        <input id="password" name="password" type="password" minlength="5"
+                        maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="password">Password</label>
                     </div>
                     <!--submit button-->
