--- a/templates/login.html
+++ b/templates/login.html
@@ -1,26 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
     
-    <h3 class="center-align">Sign Up</h3>
+    <h3 class="center-align">Log In</h3>
     
     <div class="row">
         <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
             <div class="card-panel">
-                <!--First name field -->
-                <div class="row">
-                    <div class="input-field col s6">
-                        <i class="fa-solid fa-user prefix teal-text text-darken-4"></i>
-                        <input id="firstname" name="firstname" type="text" class="validate" required>
-                        <label for="firstname">First Name</label>
-                    </div>
-
-                <!--Last name field -->
-                    <div class="input-field col s6">
-                        <i class="fa-solid fa-user prefix teal-text text-darken-4"></i>
-                        <input id="lastname" name="lastname" type="text" class="validate" required>
-                        <label for="lastname">Last Name</label>
-                    </div>
-                </div>
                 <!--Username field -->
                 <div class="row">
                     <div class="input-field col s12">
@@ -30,6 +15,7 @@
                         <label for="username">Username</label>
                     </div>
                 </div>
+
                 <!--password field -->
                 <div class="row">
                     <div class="input-field col s12">
@@ -39,15 +25,21 @@
                         <label for="password">Password</label>
                     </div>
                 </div>
-                    
+
                 <!--submit button-->
                 <div class="row">
                     <button type="submit" class="col s8 offset-m2 btn-large orange darken-4 text-shadow">
-                            SIGN UP
+                            LOG IN
                     </button>
                 </div>
             </div>
         </form>
-  </div>
+    </div>
+
+    <div class="row">
+        <div class="col s12">
+            <p
+        </div>
+    </div>
 
 {% endblock %}
