--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                 <li><a href="#">Find Campsite</a></li>
                 <li><a href="#">New Review</a></li>
                 <li><a href="#">Manage Locations</a></li>
-                <li><a href="#">Log In</a></li>
+                <li><a href="{{ url_for('login') }}">Log In</a></li>
                 <li><a href="#">Log Out</a></li>
                 <li><a href="{{ url_for('register') }}">Sign Up</a></li>                
               </ul>
@@ -44,7 +44,7 @@
             <li><a href="#">Find Campsite</a></li>
             <li><a href="#">New Review</a></li>
             <li><a href="#">Manage Locations</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="{{ url_for('login') }}">Log In</a></li>
             <li><a href="#">Log Out</a></li>
             <li><a href="{{ url_for('register') }}">Sign Up</a></li>
         </ul>
