--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
     <h3 class="center-align">Log In</h3>
     
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
             <div class="card-panel">
                 <!--Username field -->
                 <div class="row">
@@ -32,14 +32,19 @@
                             LOG IN
                     </button>
                 </div>
+
+                <div class="row">
+                    <div class="col s12">
+                        <p class="center-align">
+                            Not yet registered? 
+                            <a href="{{ url_for('register') }}" class="light-blue-text text-darken-4">Sign Up</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </form>
     </div>
 
-    <div class="row">
-        <div class="col s12">
-            <p
-        </div>
-    </div>
+    
 
 {% endblock %}
