--- a/templates/register.html
+++ b/templates/register.html
@@ -46,8 +46,19 @@
                             SIGN UP
                     </button>
                 </div>
+
+                <div class="row">
+                    <div class="col s12">
+                        <p class="center-align">
+                            Already registered? 
+                            <a href="{{ url_for('login') }}" class="light-blue-text text-darken-4">Log In</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </form>
-  </div>
+    </div>
+
+    
 
 {% endblock %}
