--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
               <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fa-solid fa-bars"></i></a>
               <ul class="right hide-on-med-and-down">
                 <li><a href="{{ url_for('get_sites') }}">Home</a></li>
-                <li><a href="#">Profile</a></li>
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="#">Find Campsite</a></li>
                 <li><a href="#">New Review</a></li>
                 <li><a href="#">Manage Locations</a></li>
@@ -40,7 +40,7 @@
         <ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align deep-orange-text text-darken-4">Happy Camper</h4></li>
             <li><a href="{{ url_for('get_sites') }}">Home</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
             <li><a href="#">Find Campsite</a></li>
             <li><a href="#">New Review</a></li>
             <li><a href="#">Manage Locations</a></li>
