--- a/templates/sites.html
+++ b/templates/sites.html
@@ -1,63 +1,32 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div>
+    <h1 class="center-align"> Browse Sites</h1>
+</div>
+   
 
+<div class="row center-align card-margin">
     {% for site in sites %}
-        {{ site.site_name }}<br>
-        {{ site.location_name }}<br>
-        {{ site.site_review }}<br>
-        {{ site.members_only }}<br>
-        {{ site.visit_date }}<br>
-        {{ site.tags }}<br>
-    {% endfor %}
+        <!-- Card from Materialize for site review cards -->
+        <div class="col s12 m6 l4">
+            <div class="card-panel shadow">
+                <!-- site name -->
+                <div class="center-align">
+                    <h3>{{ site.site_name }}</h3>
+                </div>
 
-    <!-- Image Card from Materialize -->
-        <div class="row">
-            <div class="col s12 m4">
-                <div class="card">
-                    <div class="card-image">
-                      <img src="images/sample-1.jpg">
-                      <span class="card-title">Card Title</span>
-                    </div>
-                    <div class="card-content">
-                      <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="#">This is a link</a>
-                    </div>
+                <!-- site location -->
+                <div class="center-align">
+                    <p>{{ site.location_name }}</p>
                 </div>
-            </div>
-            <div class="col s12 m4">
-                <div class="card">
-                    <div class="card-image">
-                      <img src="images/sample-1.jpg">
-                      <span class="card-title">Card Title</span>
-                    </div>
-                    <div class="card-content">
-                      <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="#">This is a link</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m4">
-                <div class="card">
-                    <div class="card-image">
-                      <img src="images/sample-1.jpg">
-                      <span class="card-title">Card Title</span>
-                    </div>
-                    <div class="card-content">
-                      <p>I am a very simple card. I am good at containing small bits of information.
-                      I am convenient because I require little markup to use effectively.</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="#">This is a link</a>
-                    </div>
+
+                <!-- Campsite reviewer -->
+                <div class="center-align">
+                    <p>Review by: </p>
                 </div>
             </div>
         </div>
-
+    {% endfor %}
+</div>
 {% endblock %}
