--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                 {% if session.user %}
                     <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="#">Find Campsite</a></li>
-                    <li><a href="#">New Review</a></li>
+                    <li><a href="{{ url_for('add_review') }}">Add Review</a></li>
                     <li><a href="#">Manage Locations</a></li>
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
@@ -46,7 +46,7 @@
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
                 <li><a href="#">Find Campsite</a></li>
-                <li><a href="#">New Review</a></li>
+                <li><a href="{{ url_for('add_review') }}">Add Review</a></li>
                 <li><a href="#">Manage Locations</a></li>
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
