--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -3,19 +3,55 @@
 
     <h3 class="center-align">Add Site Review</h3>
 
-    <!-- site revie form from Materialize -->
-    <div class="row">
+    <!-- site review form from Materialize -->
+    <div class="row card-panel grey lighten-5">
         <form class="col s12" method="POST" action="">
+            <!-- site name -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-campground prefix"></i>
-                    <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
-                    <label for="icon_prefix2">Site Name:</label>
+                    <input id="site_name" name="site_name" minlength="5"  maxlength="50" 
+                    type="text" class="validate" required>
+                    <label for="site_name">Site Name:</label>
                 </div>
+            </div>
+            <!-- location -->
+            <div class="row">
                 <div class="input-field col s12">
-                    <i class="fas fa-user-circle prefix"></i>
-                    <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
-                    <label for="icon_prefix2">First Name</label>
+                    <i class="fas fa-location-dot prefix"></i>
+                    <input id="location_name" name="location_name" minlength="5"  maxlength="50" 
+                    type="text" class="validate" required>
+                    <label for="location_name">Location:</label>
+                </div>
+            </div>
+            <!-- date picker from Materialize -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-calendar-alt prefix"></i>
+                    <input id="visit_date" name="visit_date" type="text" class="datepicker">
+                    <label for="visit_date">Date of camp:</label>
+                </div>
+            </div>
+            <!-- review text area -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-pen prefix"></i>
+                    <textarea id="site_review" name="site_review" minlength="5"
+                    maxlength="200" class="materialize-textarea validate" required></textarea>
+                    <label for="site_review">Review:</label>
+                </div>
+            </div>
+            <!-- Members Only? switch -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <div class="switch">
+                        <i class="fas fa-people-group prefix"></i>
+                        <label for="members_only">
+                            Members Only?
+                            <input type="checkbox" id="members_only" name="members_only">
+                            <span class="lever"></span>
+                        </label>
+                    </div>
                 </div>
             </div>
         </form>
