--- a/templates/sites.html
+++ b/templates/sites.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div>
-    <h1 class="center-align"> Browse Sites</h1>
+    <h3 class="center-align"> Browse Sites</h3>
 </div>
    
 
@@ -23,7 +23,7 @@
 
                 <!-- Campsite reviewer -->
                 <div class="center-align">
-                    <p>Review by: </p>
+                    <p>Review by: {{ site.created_by }}</p>
                 </div>
             </div>
         </div>
