--- a/templates/sites.html
+++ b/templates/sites.html
@@ -25,6 +25,10 @@
                 <div class="center-align">
                     <p>Review by: {{ site.created_by }}</p>
                 </div>
+
+                <div class="center-align">
+                    <a href="" class="btn-small light-blue lighten-1">Edit</a>
+                </div>
             </div>
         </div>
     {% endfor %}
