--- a/templates/sites.html
+++ b/templates/sites.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="center-align">
-                    <a href="" class="btn-small light-blue lighten-1">Edit</a>
+                    <a href="{{ url_for('edit_review', site_id=site._id) }}" class="btn-small light-blue lighten-1">Edit</a>
                 </div>
             </div>
         </div>
