--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -22,7 +22,11 @@
                         <select id="location_name" name="location_name" class="validate" required>
                         <option value="" disabled selected>Choose location</option>
                         {% for location in locations %}
-                            <option value="{{ location.location_name }}">{{ location.location_name }}</option>
+                            {% if location.location_name == site.location_name %}
+                                <option value="{{ location.location_name }}" selected>{{ location.location_name }}</option>
+                            {% else %}
+                                <option value="{{ location.location_name }}">{{ location.location_name }}</option>
+                            {% endif %}
                         {% endfor %}
                         </select>
                         <label for="location_name">Location</label>
