Update review onto database functionality added

--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -76,6 +76,7 @@
                     <a href="{{ url_for('get_sites') }}" class="btn-large red">
                         Cancel <i class="fas fa-circle-xmark right"></i>
                     </a>
+                    <!-- submit button -->
                     <button type="submit" class="btn-large">
                         Edit Review <i class="fas fa-circle-plus right"></i>
                     </button>
