--- a/templates/sites.html
+++ b/templates/sites.html
@@ -10,7 +10,7 @@
     {% for site in sites %}
         <!-- Card from Materialize for site review cards -->
         <div class="col s12 m6 l4">
-            <div class="card-panel shadow">
+            <div class="card-panel card-panel-home shadow">
                 <!-- site name -->
                 <div class="center-align">
                     <h3>{{ site.site_name }}</h3>
@@ -27,7 +27,9 @@
                 </div>
 
                 <div class="center-align">
-                    <a href="{{ url_for('edit_review', site_id=site._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                    {% if session.user|lower == site.created_by|lower %}
+                        <a href="{{ url_for('edit_review', site_id=site._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
