--- a/templates/sites.html
+++ b/templates/sites.html
@@ -28,6 +28,7 @@
 
                 <div class="center-align">
                     {% if session.user|lower == site.created_by|lower %}
+                        <a href="{{ url_for('delete_review', site_id=site._id) }}" class="btn-small red">Delete</a>
                         <a href="{{ url_for('edit_review', site_id=site._id) }}" class="btn-small light-blue lighten-1">Edit</a>
                     {% endif %}
                 </div>
