--- a/templates/locations.html
+++ b/templates/locations.html
@@ -19,4 +19,12 @@
         {% endfor %}
     </div>
 
+    <div class="row">
+        <div class="col s12 center-align">
+            <a href="{{ url_for('add_location') }}" class="btn-large green">
+                Add Location <i class="fas fa-circle-plus right"></i>
+            </a>
+        </div>
+    </div>
+
 {% endblock %}
