--- a/templates/edit_location.html
+++ b/templates/edit_location.html
@@ -1,24 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align">Add Location</h3>
+    <h3 class="center-align">Edit Location</h3>
 
     <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="{{ url_for('add_location') }}">
+        <form class="col s12" method="POST" action="{{ url_for('edit_location', location_id=location._id) }}">
             <!-- location name -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-location-dot prefix"></i>
                     <input id="location_name" name="location_name" minlength="3"  maxlength="20" 
-                    type="text" class="validate" required>
+                    type="text" value="{{ location.location_name }}" class="validate" required>
                     <label for="location_name">Location Name</label>
                 </div>
             </div>
             <!-- Submit button -->
             <div class="row">
                 <div class="col s12 center-align">
+                    <a href="{{ url_for('get_locations') }}" class="btn-large red">
+                        Cancel <i class="fas fa-circle-xmark right"></i>
+                    </a>
                     <button type="submit" class="btn-large green">
-                        Add Location <i class="fas fa-circle-plus right"></i>
+                        Edit Location <i class="fas fa-pen right"></i>
                     </button>
                 </div>
             </div>
