--- a/templates/locations.html
+++ b/templates/locations.html
@@ -11,7 +11,7 @@
                         <span class="card-title">{{ location.location_name }}</span>
                     </div>
                     <div class="card-action">
-                        <a href="#" class="btn green accent-4">Edit</a>
+                        <a href="{{ url_for('edit_location', location_id=location._id) }}" class="btn green accent-4">Edit</a>
                         <a href="#" class="btn red">Delete</a>
                     </div>
                 </div>
