--- a/templates/locations.html
+++ b/templates/locations.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="card-action">
                         <a href="{{ url_for('edit_location', location_id=location._id) }}" class="btn green accent-4">Edit</a>
-                        <a href="#" class="btn red">Delete</a>
+                        <a href="{{ url_for('delete_location', location_id=location._id) }}" class="btn red">Delete</a>
                     </div>
                 </div>
             </div>
