--- a/templates/sites.html
+++ b/templates/sites.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div>
-    <h3 class="center-align">Browse Sites</h3>
+    <h3 class="center-align">Find a Campsite</h3>
 </div>
    
 
@@ -12,8 +12,8 @@
         <div class="col s12 m6 l4">
             <div class="card-panel card-panel-home shadow">
                 <!-- site name -->
-                <div class="center-align">
-                    <h3>{{ site.site_name }}</h3>
+                <div class="center-align site-title">
+                    <h4>{{ site.site_name }}</h4>
                 </div>
 
                 <!-- site location -->
