--- a/templates/view_review.html
+++ b/templates/view_review.html
@@ -30,10 +30,14 @@
             <!-- Back button -->
             <div class="row">
                 <!-- back button -->
-                <div class="col s12 center-align"></div>
-                    <a href="{{ url_for('get_sites') }}" class="btn-large green">
+                <div class="col s12 center-align">
+                    <a href="{{ url_for('get_sites') }}" class="btn-small green">
                     Back <i class="fas fa-rotate-left right"></i>
                     </a>
+                    {% if session.user|lower == site.created_by|lower %}
+                        <a href="{{ url_for('delete_review', site_id=site._id) }}" class="btn-small red">Delete</a>
+                        <a href="{{ url_for('edit_review', site_id=site._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                    {% endif %}
                 </div>
             </div>
         </div> 
