--- a/templates/add_location.html
+++ b/templates/add_location.html
@@ -17,6 +17,10 @@
             <!-- Submit button -->
             <div class="row">
                 <div class="col s12 center-align">
+                    <!-- cancel button -->
+                    <a href="{{ url_for('get_sites') }}" class="btn-large red">
+                        Cancel <i class="fas fa-circle-xmark right"></i>
+                    </a>
                     <button type="submit" class="btn-large green">
                         Add Location <i class="fas fa-circle-plus right"></i>
                     </button>
