--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -61,7 +61,11 @@
             <!-- Submit button -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <button type="submit" class="btn-large">
+                    <!-- cancel button -->
+                    <a href="{{ url_for('get_sites') }}" class="btn-large red">
+                        Cancel <i class="fas fa-circle-xmark right"></i>
+                    </a>
+                    <button type="submit" class="btn-large green">
                         Add Review <i class="fas fa-circle-plus right"></i>
                     </button>
                 </div>
