--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -77,7 +77,7 @@
                         Cancel <i class="fas fa-circle-xmark right"></i>
                     </a>
                     <!-- submit button -->
-                    <button type="submit" class="btn-large">
+                    <button type="submit" class="btn-large green">
                         Edit Review <i class="fas fa-circle-plus right"></i>
                     </button>
                 </div>
