--- a/templates/sites.html
+++ b/templates/sites.html
@@ -1,35 +1,56 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div>
     <h3 class="center-align">Find a Campsite</h3>
-</div>
-   
-
-<div class="row center-align card-margin">
-    {% for site in sites %}
-        <!-- Card from Materialize for site review cards -->
-        <div class="col s12 m6 l4">
-            <div class="card-panel card-panel-home shadow">
-                <!-- site name -->
-                <div class="center-align site-title">
-                    <h4>{{ site.site_name }}</h4>
+    
+    <div class="row card-panel">
+        <form action="{{ url_for('search') }}" method="post" class="col s12">
+            <div class="row valign-wrapper center-align">
+                <div class="input-field col s12 m8">
+                    <i class="fas fa-search prefix"></i>
+                    <input type="text" name="query" id="query" minlength="3" maxlength="20" class="validate" required>
+                    <label for="query">Search Sites</label>
                 </div>
-
-                <!-- site location -->
-                <div class="center-align">
-                    <p>{{ site.location_name }}</p>
-                </div>
-
-                <div class="center-align">
-                    <a href="{{ url_for('view_review', site_id=site._id) }}" class="btn-small green">View</a>
-                    {% if session.user|lower == site.created_by|lower %}
-                        <a href="{{ url_for('delete_review', site_id=site._id) }}" class="btn-small red">Delete</a>
-                        <a href="{{ url_for('edit_review', site_id=site._id) }}" class="btn-small light-blue lighten-1">Edit</a>
-                    {% endif %}
+                <div class="col s12 m4">
+                    <a href="{{ url_for('get_sites') }}" class="red btn">reset
+                        <i class="fas fa-rotate-left right"></i></a>
+                    <button type="submit" class="btn green">
+                        <i class="fas fa-search right"></i> search
+                    </button>
                 </div>
             </div>
-        </div>
-    {% endfor %}
-</div>
+        </form>
+    </div>
+   
+    {% if sites|length > 0 %}
+    <div class="row center-align card-margin">
+        {% for site in sites %}
+            <!-- Card from Materialize for site review cards -->
+            <div class="col s12 m6 l4">
+                <div class="card-panel card-panel-home shadow">
+                    <!-- site name -->
+                    <div class="center-align site-title">
+                        <h4>{{ site.site_name }}</h4>
+                    </div>
+
+                    <!-- site location -->
+                    <div class="center-align">
+                        <p>{{ site.location_name }}</p>
+                    </div>
+
+                    <div class="center-align">
+                        <a href="{{ url_for('view_review', site_id=site._id) }}" class="btn-small green">View</a>
+                        {% if session.user|lower == site.created_by|lower %}
+                            <a href="{{ url_for('delete_review', site_id=site._id) }}" class="btn-small red">Delete</a>
+                            <a href="{{ url_for('edit_review', site_id=site._id) }}" class="btn-small light-blue lighten-1">Edit</a>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    {% else %}
+        <h3 class="center-align">No sites found</h3>
+    {% endif %}
+
 {% endblock %}
