--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 
+    <section class="container-fluid">
+
+        <!-- page hero image -->
+        <div class="col-12">
+            <div class="row">
+                <div class="bg-image">
+                    <h1>Happy Camper</h1>
+                </div>
+            </div>
+        </div>
+
+    </section>
 {% endblock %}
