--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,10 +8,17 @@
 }
 
 /* --- Hero Image --- */
+.hero-outer{
+    height: 400px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
 .bg-image {
     width: 100%;
     height: 400px;
-    background: url('../images/site-hero-image.png') no-repeat center center;
+    background: url('../images/heroimage.png') no-repeat bottom center;
     background-size: cover;
     margin: auto;
 }
