--- a/templates/add_location.html
+++ b/templates/add_location.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-
+<div class="container">
     <h3 class="center-align">Add Location</h3>
 
     <div class="row card-panel grey lighten-5">
@@ -28,5 +28,5 @@
             </div>
         </form>
     </div>
-
+</div>
 {% endblock %}
