--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
         {% endwith %}
     </section>
 
-    <main class="container">
+   <main>
         {% block content %}
         {% endblock %}
     </main>
