--- a/templates/sites.html
+++ b/templates/sites.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-
+<div class="container">
+        
     <h3 class="center-align">Find a Campsite</h3>
     
     <div class="row card-panel">
@@ -52,5 +53,5 @@
     {% else %}
         <h3 class="center-align">No sites found</h3>
     {% endif %}
-
+</div>
 {% endblock %}
