Container added to all pages

--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="container">
     <h3 class="center-align">Add Site Review</h3>
 
     <!-- site review form from Materialize -->
@@ -72,5 +73,6 @@
             </div>
         </form>
     </div>
+</div>
 
 {% endblock %}
