--- a/templates/edit_location.html
+++ b/templates/edit_location.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="container">
     <h3 class="center-align">Edit Location</h3>
 
     <div class="row card-panel grey lighten-5">
@@ -27,5 +28,6 @@
             </div>
         </form>
     </div>
+</div>
 
 {% endblock %}
