--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="container">
     <h3 class="center-align">Edit Site Review</h3>
 
     <!-- site review form from Materialize -->
@@ -84,5 +85,6 @@
             </div>
         </form>
     </div>
+</div>
 
 {% endblock %}
