--- a/templates/locations.html
+++ b/templates/locations.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="container">
     <h3 class="center-align">Manage Locations</h3>
 
     <div class="row">
@@ -26,5 +27,6 @@
             </a>
         </div>
     </div>
+</div>
 
 {% endblock %}
