--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-    
+
+<div class="container">
     <h3 class="center-align">Sign Up</h3>
     
     <div class="row">
@@ -58,7 +59,7 @@
             </div>
         </form>
     </div>
-
+</div>
     
 
 {% endblock %}
