--- a/templates/view_review.html
+++ b/templates/view_review.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="container">
     <h3 class="center-align">Site Review</h3>
 
     <!-- site review -->
@@ -57,5 +58,6 @@
             </div>
         </div> 
     </div>
+</div>
 
 {% endblock %}
