--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,6 +35,11 @@ h4 {
     font-family: 'Poppins', sans-serif;
     color: white;
     text-align: left;
+    margin-left: 20px;
+}
+
+.nav-wrapper {
+    padding-right: 20px;
 }
 
 /* --- Hero Image --- */
