--- a/templates/base.html
+++ b/templates/base.html
@@ -74,11 +74,45 @@
         {% endwith %}
     </section>
 
+<!-- Main content block -->
    <main>
         {% block content %}
         {% endblock %}
     </main>
 
+<!-- Footer section-->
+    <footer class="page-footer blue-grey darken-1 center-align">
+        <div class="container">
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com" class="social-media-hover" target="_blank">
+                        <i class="social-media-icon fa-brands fa-facebook" aria-hidden="true"></i>
+                        <span class="sr-only">Facebook</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com" class="social-media-hover" target="_blank">
+                        <i class="social-media-icon fa-brands fa-twitter" aria-hidden="true"></i>
+                        <span class="sr-only">Twitter</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com" class="social-media-hover" target="_blank">
+                        <i class="social-media-icon fa-brands fa-instagram" aria-hidden="true"></i>
+                        <span class="sr-only">Instagram</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="footer-copyright">
+            <div class="container">
+                © 2023 Emma Scott
+            </div>
+        </div>
+    </footer>
+
+<!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
