--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,6 @@
 /*--- Google Font Import ---*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Raleway&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    border: 0;
-}
-
 body {
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
@@ -28,6 +22,10 @@ h3,
 h4 {
     font-family: 'Poppins', sans-serif;
     color: white;
+}
+
+.review-title {
+    color: #37474f;
 }
 
 .text-shadow {
@@ -82,6 +80,7 @@ h4 {
 .site-title {
     max-height: 6em;
     overflow: clip;
+    color: #37474f;
 }
 
 .card-panel {
@@ -92,6 +91,8 @@ h4 {
     font-size: xx-large;
 }
 
+
+/*--- Footer ---*/
 .social-media-icon {
     font-size: 2rem;
     color: #fafafa;
