--- a/templates/sites.html
+++ b/templates/sites.html
@@ -4,7 +4,7 @@
 <div class="container">
         
     <h3 class="center-align">Find a Campsite</h3>
-    
+    <!--- Search bar -->
     <div class="row card-panel">
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
@@ -13,9 +13,12 @@
                     <input type="text" name="query" id="query" minlength="3" maxlength="20" class="validate" required>
                     <label for="query">Search Sites</label>
                 </div>
+                
                 <div class="col s12 m4">
+                    <!-- Reset Button-->
                     <a href="{{ url_for('get_sites') }}" class="red btn">reset
                         <i class="fas fa-rotate-left right"></i></a>
+                    <!-- Submit Button-->
                     <button type="submit" class="btn green">
                         <i class="fas fa-search right"></i> search
                     </button>
@@ -23,21 +26,30 @@
             </div>
         </form>
     </div>
-   
+   <!-- Check if there are more than 0 site reviews and display them as cards -->
     {% if sites|length > 0 %}
     <div class="row center-align card-margin">
         {% for site in sites %}
             <!-- Card from Materialize for site review cards -->
-            <div class="col s12 m6 l4">
-                <div class="card-panel card-panel-home shadow">
+            <div class="col s12 m6 l3">
+                <div class="card shadow">
+                    <!-- site image -->
+                    <div class="card-image">
+                        <img src="{{ site.image_url }}" alt="campsite image">
+                    </div>
                     <!-- site name -->
                     <div class="center-align site-title">
-                        <h5>{{ site.site_name }}</h5>
+                        <h5><strong>{{ site.site_name }}</strong></h5>
                     </div>
 
                     <!-- site location -->
                     <div class="center-align">
                         <p>{{ site.location_name }}</p>
+                    </div>
+
+                    <!-- created by -->
+                    <div class="center-align">
+                        <p>Reviewed by: {{ site.created_by }}</p>
                     </div>
 
                     <div class="center-align">
