Styling added to all log in and sign up page form

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
                 <!--Username field -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="fa-solid fa-user-shield prefix teal-text text-darken-4"></i>
+                        <i class="fa-solid fa-user-shield prefix blue-grey-text text-darken-4"></i>
                         <input id="username" name="username" type="text" minlength="5"
                         maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="username">Username</label>
@@ -19,7 +19,7 @@
                 <!--password field -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="fa-solid fa-lock prefix teal-text text-darken-4"></i>
+                        <i class="fa-solid fa-lock prefix blue-grey-text text-darken-4"></i>
                         <input id="password" name="password" type="password" minlength="5"
                         maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="password">Password</label>
@@ -28,7 +28,7 @@
 
                 <!--submit button-->
                 <div class="row">
-                    <button type="submit" class="col s8 offset-m2 btn-large orange darken-4 text-shadow">
+                    <button type="submit" class="col s12 m8 offset-m2 l2 offset-l5 btn-large blue-grey darken-4 text-shadow">
                             LOG IN
                     </button>
                 </div>
