--- a/templates/register.html
+++ b/templates/register.html
@@ -10,14 +10,14 @@
                 <!--First name field -->
                 <div class="row">
                     <div class="input-field col s6">
-                        <i class="fa-solid fa-user prefix teal-text text-darken-4"></i>
+                        <i class="fa-solid fa-user prefix blue-grey-text text-darken-4"></i>
                         <input id="firstname" name="firstname" type="text" class="validate" required>
                         <label for="firstname">First Name</label>
                     </div>
 
                 <!--Last name field -->
                     <div class="input-field col s6">
-                        <i class="fa-solid fa-user prefix teal-text text-darken-4"></i>
+                        <i class="fa-solid fa-user prefix blue-grey-text text-darken-4"></i>
                         <input id="lastname" name="lastname" type="text" class="validate" required>
                         <label for="lastname">Last Name</label>
                     </div>
@@ -25,7 +25,7 @@
                 <!--Username field -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="fa-solid fa-user-shield prefix teal-text text-darken-4"></i>
+                        <i class="fa-solid fa-user-shield prefix blue-grey-text text-darken-4"></i>
                         <input id="username" name="username" type="text" minlength="5"
                         maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="username">Username</label>
@@ -34,7 +34,7 @@
                 <!--password field -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="fa-solid fa-lock prefix teal-text text-darken-4"></i>
+                        <i class="fa-solid fa-lock prefix blue-grey-text text-darken-4"></i>
                         <input id="password" name="password" type="password" minlength="5"
                         maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                         <label for="password">Password</label>
@@ -43,7 +43,7 @@
                     
                 <!--submit button-->
                 <div class="row">
-                    <button type="submit" class="col s8 offset-m2 btn-large orange darken-4 text-shadow">
+                    <button type="submit" class="col s12 m8 offset-m2 l2 offset-l5 btn-large blue-grey darken-4 text-shadow">
                             SIGN UP
                     </button>
                 </div>
