--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,7 +34,9 @@ h4 {
 
 .flashes h4 {
     line-height: 2;
-    background-color: #E9C46A;
+    background-color: #fafafa;
+    color: #37474f;
+    text-align: center;
 }
 
 .brand-logo {
@@ -74,7 +76,7 @@ h4 {
 }
 
 .card-panel-home {
-    height: 300px;
+    height: 225px;
 }
 
 .site-title {
@@ -105,4 +107,11 @@ h4 {
 
 footer li {
     display: inline;
+}
+
+.site-image {   
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 175px;
 }
