--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <div class="container">
+
     <h3 class="center-align">Add Site Review</h3>
 
     <!-- site review form from Materialize -->
@@ -42,8 +43,17 @@
                 <div class="input-field col s12">
                     <i class="fas fa-pen prefix"></i>
                     <textarea id="site_review" name="site_review" minlength="5"
-                    maxlength="200" class="materialize-textarea validate" required></textarea>
+                    maxlength="800" class="materialize-textarea validate" required></textarea>
                     <label for="site_review">Review</label>
+                </div>
+            </div>
+            <!-- Image URL -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-camera prefix"></i>
+                    <input id="image_url" name="image_url" minlength="5"  maxlength="100" 
+                    type="text" class="validate">
+                    <label for="image_url">Image URL</label>
                 </div>
             </div>
             <!-- Members Only? switch -->
@@ -59,6 +69,7 @@
                     </div>
                 </div>
             </div>
+            
             <!-- Submit button -->
             <div class="row">
                 <div class="col s12 center-align">
@@ -66,7 +77,7 @@
                     <a href="{{ url_for('get_sites') }}" class="btn-large red">
                         Cancel <i class="fas fa-circle-xmark right"></i>
                     </a>
-                    <button type="submit" class="btn-large green">
+                    <button type="submit" class="btn-large blue-grey">
                         Add Review <i class="fas fa-circle-plus right"></i>
                     </button>
                 </div>
