--- a/templates/sites.html
+++ b/templates/sites.html
@@ -15,9 +15,6 @@
                 </div>
                 
                 <div class="col s12 m4">
-                    <!-- Reset Button-->
-                    <a href="{{ url_for('get_sites') }}" class="red btn">reset
-                        <i class="fas fa-rotate-left right"></i></a>
                     <!-- Submit Button-->
                     <button type="submit" class="btn green">
                         <i class="fas fa-search right"></i> search
@@ -31,11 +28,15 @@
     <div class="row center-align card-margin">
         {% for site in sites %}
             <!-- Card from Materialize for site review cards -->
-            <div class="col s12 m6 l3">
+            <div class="col s12 m6 l4">
                 <div class="card shadow">
                     <!-- site image -->
-                    <div class="card-image">
-                        <img src="{{ site.image_url }}" alt="campsite image">
+                    
+                    {% if site.image_url != ""  %}
+                        <div class="card-image site-image" style="background-image:url('{{ site.image_url }}');">
+                    {% else %}
+                        <div class="card-image site-image" style="background-image: url('/static/images/tent-image.jpg');">
+                    {% endif %}
                     </div>
                     <!-- site name -->
                     <div class="center-align site-title">
@@ -53,7 +54,7 @@
                     </div>
 
                     <div class="center-align">
-                        <a href="{{ url_for('view_review', site_id=site._id) }}" class="btn-small green">View</a>
+                        <a href="{{ url_for('view_review', site_id=site._id) }}" class="btn-small blue-grey">View</a>
                         {% if ((session.user|lower == site.created_by|lower) or (session.user == "admin")) %}
                             <a href="{{ url_for('delete_review', site_id=site._id) }}" class="btn-small red">Delete</a>
                             <a href="{{ url_for('edit_review', site_id=site._id) }}" class="btn-small light-blue lighten-1">Edit</a>
