Bug Fix - added URL field to Edit Review page

--- a/templates/view_review.html
+++ b/templates/view_review.html
@@ -46,6 +46,13 @@
                             </div>
                         </div>
 
+                        <!-- Image URL -->
+                        <div class="row">
+                            <div class="left-align">
+                                <p><i class="fas fa-camera prefix small"></i> Image URL: {{ site.image_url }}</p>
+                            </div>
+                        </div>
+
                         <!-- members only -->
                         <div class="row">
                             <div class="left-align">
