--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -53,6 +53,15 @@
                     <label for="site_review">Review</label>
                 </div>
             </div>
+            <!-- Image URL -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-camera prefix"></i>
+                    <input id="image_url" name="image_url" minlength="5"  maxlength="100" 
+                    value="{{ site.image_url }}" type="text" class="validate">
+                    <label for="image_url">Image URL: </label>
+                </div>
+            </div>
             <!-- Members Only? switch -->
             <div class="row">
                 <div class="input-field col s12">
