--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,6 +79,10 @@ h4 {
     height: 225px;
 }
 
+.card-panel-location {
+    height: 200px;
+}
+
 .site-title {
     max-height: 2em;
     overflow: clip;
@@ -99,6 +103,10 @@ h4 {
     color: #fafafa;
 }
 
+.modal-hover {
+    color: #37474f;
+}
+
 .hover-link h4 {
     color: #37474f;
 }
@@ -107,6 +115,10 @@ h4 {
     color: #0277bd;
 }
 
+.location-title {
+    color: #37474f;
+    padding: 10px;
+}
 
 /*--- Footer ---*/
 .social-media-icon {
